--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 .header-container{
   width: 100%;
   height: 200px;
+  position: relative;
 }
 .logo-container{
   width: 25%;
@@ -14,9 +15,47 @@
   margin-top: 50px;
 }
 .menu-container{
+  width: 80%;
   display: inline-block;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
-.menu-level-1{
-  list-style: none;
-  display: inline-block;
+
+/* dropdown menu taken from google */
+.dropbtn {
+    background-color: #FFAB00;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: 1.5px solid black;
+    border-radius: 7.5px;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #FFAB00;
+    min-width: 160px;
+    z-index: 1;
+}
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: black}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown:hover .dropbtn {
+    background-color: black;
+    cursor: pointer;
 }
