--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 /* Header */
+
 .header-container{
   width: 100%;
   height: 200px;
@@ -44,6 +45,7 @@
     background-color: #FFAB00;
     min-width: 160px;
     z-index: 1;
+    margin: 1px 0 0 0;
 }
 .dropdown-content a {
     color: white;
@@ -59,3 +61,92 @@
     background-color: black;
     cursor: pointer;
 }
+
+/* End header */
+/* Home */
+
+.section-title{
+  text-align: center;
+  position: relative;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+.section-title::before{
+  content: "";
+  height: 1px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  background: black;
+  z-index: -1;
+}
+.section-title h2{
+  background: white;
+  display: inline-block;
+  padding: 0 15px;
+  letter-spacing: 4px;
+}
+
+.news-feed-container{
+  width: 100%;
+}
+.news-container{
+  width: 90%;
+  margin: auto;
+  background-color: #771B32;
+  position: relative;
+}
+.lastnews-container{
+  width: 65%;
+  background-color: white;
+  display: inline-block;
+  text-align: center;
+  margin: 1%;
+}
+.lastnews-container img{
+  width: 90%;
+  height: auto;
+  margin: 8px 0;
+}
+.news-text{
+  width: 80%;
+  text-align: left;
+  margin: 8px auto;
+}
+.allnews-container{
+  width: 30%;
+  background-color: white;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  margin: 1%;
+  text-align: center;
+}
+.allnews-container img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 100% 10%;
+  margin-bottom: 6px;
+}
+.img-container{
+  position: relative;
+  width: 90%;
+  height: 72px;
+  margin: 8px auto;
+}
+.img-text{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 70%;
+  height: 100%;
+  color: white;
+  font-weight: bold;
+  background-color: #556C8B;
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+/* End home */
