--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@
   margin: auto;
 }
 
-/* dropdown menu taken from google */
+/* dropdown menu */
 .dropbtn {
     background-color: #FFAB00;
     color: white;
@@ -93,10 +93,11 @@
 }
 .news-container{
   width: 90%;
-  margin: auto;
+  margin: 0 auto 26px auto;
   background-color: #771B32;
   position: relative;
 }
+
 .lastnews-container{
   width: 65%;
   background-color: white;
@@ -114,6 +115,7 @@
   text-align: left;
   margin: 8px auto;
 }
+
 .allnews-container{
   width: 30%;
   background-color: white;
@@ -149,4 +151,67 @@
   cursor: pointer;
 }
 
+.bestSellingGames-container{
+  width: 100%;
+  text-align: center;
+}
+.bestSellingGame-container{
+  display: inline-grid;
+  width: 20%;
+  margin: 1%;
+}
+.bestSellingGame-container img {
+  width: 100%;
+}
+
 /* End home */
+/* Footer */
+
+.footer-container{
+  width: 100%;
+  border-top: 3px solid black;
+  position: relative;
+}
+
+.shareButtons-container{
+  display: inline-block;
+  width: 20%;
+  text-align: center;
+  position: absolute;
+  left: 0;
+}
+.shareButtons-container i{
+  margin: 8px;
+}
+
+.informations-container{
+  display: inline-block;
+  width: 40%;
+  text-align: center;
+  position: absolute;
+  left: 30%;
+  right: 25%;
+}
+.informations-container a{
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 0 6px;
+}
+
+.language-container{
+  display: inline-block;
+  width: 10%;
+  position: absolute;
+  right: 0;
+}
+
+.footerLogo-container{
+  width: 10%;
+  margin: 48px auto 24px auto;
+}
+.footerLogo-container img{
+  width: 80%;
+}
